Fix NoClassDefFoundError when using Java9